Changelog for mk-table-sync:

2010-02-01: version 1.0.24

   * Nibble did not case-insensitively check its index (issue 804).

2010-01-06: version 1.0.23

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-12-02: version 1.0.22

   * Added note to output when using --dry-run (issue 691).

2009-10-30: version 1.0.21

   * Fixed an infinite loop with the Nibble algorithm (issue 644).
   * Nibble could fail to sync small tables (issue 634).
   * --set-vars did not work (issue 597).
   * Column order was not preserved in SQL statments (issue 371).
   * GroupBy and Stream algorithms did not reset after first table (issue 631).
   * Command line options did not override config file options (issue 617).

2009-10-01: version 1.0.20

   * --replicate did not work.

2009-09-30: version 1.0.19

   * Fixed an infinite loop with the Nibble algorithm (issue 96).
   * Fixed incorrect INSERT values (issue 616).
   * Changed --algorithm to --algorithms and changed what it does.
   * Changed --[no]slave-check to --[no]check-slave.
   * Changed --with-triggers to --[no]check-triggers.
   * Changed --buffer-results to --[no]buffer-to-client.
   * Changed --no-use-index to --[no]index-hint.
   * Added --[no]check-privileges.
   * Added --chunk-index.
   * Added --chunk-column.
   * Added --float-precision (issue 410).
   * Made --verbose cumulative.
   * Master-master sync did not require --no-slave-check.

2009-08-31: version 1.0.18

   * Added --[no]check-master (issue 110).
   * --lock 3 did not work (issue 86).
   * The script did not work with MySQL replicate-do-db (issue 533).
   * Removed --[no]utf8.  Pass the C<A> option in a DSN instead.
   * Added standard connection options like --host, --port, etc.(issue 248).
   * --databases was not honored when using --replicate (issue 367).

2009-07-31: version 1.0.17

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).