@@ -1,5 +1,7 @@
 Changelog for mk-table-sync:
 
+   * Row-based replication prevented some changes (issue 95).
+
 2010-02-01: version 1.0.24
 
    * Nibble did not case-insensitively check its index (issue 804).
